--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^11.17.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "swiper": "^11.2.1",
     "zustand": "^5.0.3"
